# viedefamille

./: .gitignore  README.md  app.py  main.py  pyproject.toml
templates/: journal.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_journal.py
viedefamille/: __init__.py  auth.py  db.py  journal.py  schema.sql
viedefamille/static/: style.css
viedefamille/templates/: base.html  journal.html
viedefamille/templates/auth/: register.html
viedefamille/templates/journal/: create.html  index.html  update.html
