[project]
name = "viedefamille"
version = "0.1.0"
description = "A simple family organiser application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "pytest>=8.4.2",
    "ruff>=0.15.12",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["viedefamille"]
